--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         </button>
                         <button class="theme-option" data-theme="night">
                             <div class="theme-preview night-preview"></div>
-                            <span>都会の雨</span>
+                            <span>京都の雨</span>
                         </button>
                     </div>
                 </div>
