学習進捗りセット機能

--- a/index.html
+++ b/index.html
@@ -173,6 +173,12 @@
                     <h4>❌ 復習が必要な問題</h4>
                     <div id="wrongQuestionsContainer"></div>
                 </div>
+                
+                <div class="progress-actions">
+                    <button class="reset-progress-button" onclick="resetLearningProgress()">
+                        🗑️ 学習進捗をリセット
+                    </button>
+                </div>
             </div>
         </div>
     </div>
